[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browserbeam"
version = "0.4.0"
description = "Official Python SDK for the Browserbeam API — browser automation built for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Browserbeam", email = "hello@browserbeam.com" }]
keywords = ["browserbeam", "browser", "automation", "ai", "llm", "scraping", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://browserbeam.com"
Documentation = "https://browserbeam.com/docs/"
Repository = "https://github.com/nyku/browserbeam-python"
Changelog = "https://github.com/nyku/browserbeam-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["browserbeam"]
